Prevented remaining chapter pages info from shrinking and wrapping

--- a/src/view/reader/ChapterInfo.css
+++ b/src/view/reader/ChapterInfo.css
@@ -20,5 +20,6 @@
 
 #chapter-info-progress {
   font-variant: normal;
+  flex-shrink: 0;
   font-weight: normal;
 }
